--- a/html/home.html
+++ b/html/home.html
@@ -29,7 +29,7 @@
                 </ul>
               </nav>
                <div class="rb-header-text">
-                   <h1>Home Design-<strong> RB'</strong></h1>
+                   <h1>Home Design-<strong> br'</strong></h1>
                 </div>
             </div>
         </div>
