--- a/html/about.html
+++ b/html/about.html
@@ -6,33 +6,54 @@
   <title>About</title>
   <link rel="stylesheet" href="../css/about.css">
   <link rel="icon" href="../fotot/icon2.jpg">
+  <script src="../js/about.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="../bootstrap/js/bootstrap.js">
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
+
 </head>
 
 <body id="rb-design-home">
 
-  <section class="about">
-    <div class="container">
-      <div class="main">
-        <div class="row">
-          <div class="col-md-6">
-            <img src="../fotot/image1.jpg" class="img-fluid">
-          </div>
-          <div class="col-md-6">
-            <div class="about-text">
-              <h1>About Us</h1>
-              <h5>Home design</h5>
-              <p>Welcome to a world, where ideas merge seamlessly with function, creating the perfect harmony in your home design. Our approach to creating living spaces goes beyond aesthetic to creating an experience that reflects your unique style and personality. From the moment you enter your home, every element is carefully selected to reflect your taste and preferences.</p>
-              <a href="https://www.quora.com/How-do-I-get-front-end-developer-experience-as-a-student"> <button type="button">Click me</button></a>
+ <header>
+    <div id="rb-header">
+      <div class="rb-container">
+        <nav>
+          <img src="../fotot/icon1.jpg" class="logo">
+          <ul>
+            <li><a href="../html/home.html" class="rb-nav-item"><i class="fa-solid fa-house"></i>Home</a></li>
+            <li><a href="../html/about.html" class="rb-nav-item"><i class="fa-solid fa-user"></i>About</a></li>
+            <li><a href="../html/services.html" class="rb-nav-item"><i class="fa-solid fa-paint-roller"></i>Services</a></li>
+            <li><a href="../html/terms.html" class="rb-nav-item"><i class="fa-regular fa-clipboard"></i>Terms</a></li>
+            <li><a href="../html/contact.html" class="rb-nav-item"><i class="fa-solid fa-address-book"></i>Contact</a></li>
+            <li><a href="../html/inspiration.html" class="rb-nav-item"><i class="fa-solid fa-lightbulb"></i>Inspiration</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+
+ 
+    <section class="rb-about">
+      <div class="container">
+        <div class="main">
+          <div class="row">
+            <div class="col-md-6">
+              <img src="../fotot/image1.jpg" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+              <div class="rb-about-text">
+                <h1>About Us</h1>
+                <h5>Home design</h5>
+                <p>Welcome to a world, where ideas merge seamlessly with function, creating the perfect harmony in your home design. Our approach to creating living spaces goes beyond aesthetic to creating an experience that reflects your unique style and personality. From the moment you enter your home, every element is carefully selected to reflect your taste and preferences.</p>
+                <a href="https://www.quora.com/How-do-I-get-front-end-developer-experience-as-a-student"> <button type="button">Click me</button></a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
- </section>
+    </section>
+  </header>
 
   <footer class="bg-dark text-white pt-5 pb-4">
     <div class="container text-center text-md-left">
