foto+, home dropdown,login, about

--- a/html/about.html
+++ b/html/about.html
@@ -61,16 +61,16 @@
         <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
           <p class="text-transform-uppercase">
-            <a href="#" class="text-decoration-none text-success">Designer</a>
+            <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-success">Designer</a>
           </p>
           <p>
-            <a href="#" class="text-decoration-none text-info">Interactions</a>
+            <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-info">Interactions</a>
           </p>
           <p>
-            <a href="#"class="text-decoration-none text-warning">Hosting</a>
+            <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-warning">Hosting</a>
           </p>
           <p>
-            <a href="#" class="text-decoration-none text-danger">Edition</a>
+            <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-danger">Edition</a>
           </p>
         </div>
           <div class="col-md-2 col-lg-2 col-xl-2 mt-3">
@@ -106,7 +106,7 @@
       <div class="row align-items-center">
         <div class="col-md-5  col-lg-8">
           <p>&copy; Copyright 2023 All reserved by
-          <a href="#"class="text-success text-decoration-none"><strong>Rinesa Bislimi</strong></a></p>
+          <a href="../html/about.html"class="text-success text-decoration-none"><strong>Rinesa Bislimi</strong></a></p>
         </div>
       </div>
     </div>
