--- a/html/home.html
+++ b/html/home.html
@@ -22,12 +22,23 @@
                    <ul>
                       <li><a href="../html/home1.html" class="rb-nav-item"><i class="fa-solid fa-house"></i>Home</a></li>
                       <li><a href="../html/about.html" class="rb-nav-item"><i class="fa-solid fa-user"></i>About</a></li>
-                      <li><a href="../html/services.html" class="rb-nav-item"><i class="fa-solid fa-paint-roller"></i>Services</a></li>
+                      <li><a href="../html/services.html" class="rb-nav-item"><i class="fa-solid fa-paint-roller"></i>Services</a>
+                        <div class="dropdown">
+                            <a href="#">Language</a>
+                        </div>
+                      </li>
                       <li><a href="../html/terms.html" class="rb-nav-item"><i class="fa-regular fa-clipboard"></i>Terms</a></li>
-                      <li><a href="../html/contact.html" class="rb-nav-item"><i class="fa-solid fa-address-book"></i>Contact</a></li>
+                      <li>
+                         <a href="../html/contact.html" class="rb-nav-item"><i class="fa-solid fa-address-book"></i>Contact</a>
+                            <div class="dropdown">
+                                <a href="#">Login </a>
+                                <a href="#">Sign up</a>
+                            </div>
+                        </li>
                       <li><a href="../html/inspiration.html" class="rb-nav-item"><i class="fa-solid fa-lightbulb"></i>Inspiration</a></li>
                     </ul>
                </nav>
+            
                <div class="rb-header-text">
                    <h1>Home Design-<strong> RB'</strong></h1>
                </div>
