home-header-section. about-header-html-css, service, foto+

--- a/html/about.html
+++ b/html/about.html
@@ -15,7 +15,7 @@
 </head>
 
 <body id="rb-design-home">
-
+ <!--Header-->
  <header>
     <div id="rb-header">
       <div class="rb-container">
@@ -32,11 +32,11 @@
         </nav>
       </div>
     </div>
-
- 
+   
+    <!--Section-->
     <section class="rb-about">
-      <div class="container">
-        <div class="main">
+      <div class="rb-container">
+        <div class="rb-main">
           <div class="row">
             <div class="col-md-6">
               <img src="../fotot/image1.jpg" class="img-fluid">
@@ -54,7 +54,7 @@
       </div>
     </section>
   </header>
-
+  <!--Footer-->
   <footer class="bg-dark text-white pt-5 pb-4">
     <div class="container text-center text-md-left">
       <div class="row text-center text-md-left">
