krijimi i login, ndryshime ne faqet e tjera

--- a/html/about.html
+++ b/html/about.html
@@ -20,7 +20,7 @@
     <div id="rb-header">
       <div class="rb-container">
         <nav>
-          <img src="../fotot/icon1.jpg" class="logo">
+          <img src="../fotot/icon1.jpg" class="rb-logo"> 
           <ul>
             <li><a href="../html/home.html" class="rb-nav-item"><i class="fa-solid fa-house"></i>Home</a></li>
             <li><a href="../html/about.html" class="rb-nav-item"><i class="fa-solid fa-user"></i>About</a></li>
@@ -38,10 +38,10 @@
       <div class="rb-container">
         <div class="rb-main">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 col-xs-12">
               <img src="../fotot/image1.jpg" class="img-fluid">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-xs-12">
               <div class="rb-about-text">
                 <h1>About Us</h1>
                 <h5>Home design</h5>
@@ -58,7 +58,7 @@
   <footer class="bg-dark text-white pt-5 pb-4">
     <div class="container text-center text-md-left">
       <div class="row text-center text-md-left">
-        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+        <div class="col-md-4 col-xs-12">
           <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
           <p class="text-transform-uppercase">
             <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-success">Designer</a>
@@ -73,7 +73,7 @@
             <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-danger">Edition</a>
           </p>
         </div>
-          <div class="col-md-2 col-lg-2 col-xl-2 mt-3">
+          <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase mb-4 font-weight-bold text-light">The sites</h5>
             <p>
               <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-warning text-decoration-none">Products</a>
@@ -85,7 +85,7 @@
              <a href="https://www.designtosell.com/" class="text-success text-decoration-none">Sells</a>
             </p>
           </div>
-          <div class="col-md-3 col-lg-2 col-xl-2 mt-3">
+          <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase">Social</h5>
             <p>
               <a href="https://www.facebook.com/" class="text-info text-decoration-none">
@@ -102,9 +102,9 @@
           </div>
       </div>
 
-      <hr class="mb-4">
+      <hr class="mb-6">
       <div class="row align-items-center">
-        <div class="col-md-5  col-lg-8">
+        <div class="col-md-6 col-xs-12">
           <p>&copy; Copyright 2023 All reserved by
           <a href="../html/about.html"class="text-success text-decoration-none"><strong>Rinesa Bislimi</strong></a></p>
         </div>
