--- a/html/login.html
+++ b/html/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="../css/login.css">
+    <script src="../js/login.js" defer></script>
     <link rel="icon" href="../fotot/icon3.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -14,20 +15,39 @@
 
 <body id="rb-homedesign">
 
-  <section class="login">
-       <div class="login-form">
-          <h1>Login</h1>
-          <p>I am available. Connect with me via phone: 043****90 or email: name1@gmail.com</p>
-          <form action="">
-            <input type="" placeholder="Your name " required>
-            <input type="email" name="email" id="" placeholder="E-mail" required>
-            <input type="" placeholder="Write a subject" required>
-          </form>
-        </div>
-  </section>
-  <main>
+  <!--Header-->
+  <header>
 
-  </main>
+  </header>
+  <!--Section-->
+  <section class="rb-container forms">
+    <div class="rb-form login">
+      <div class="rb-form-content">
+        <header class="rb-header">Login</header>
+        <form action="#"class="rb-field">
+          <div class="rb-field input-type-field">
+            <input type="email" placeholder="Email" class="input">
+          </div>
+          <div class="rb-field input-type-field">
+            <input type="password" placeholder="Password" class="rb-password">
+            <i class="fa-regular fa-eye-slash rb-eyes-icon"></i>
+          </div>
+          <div class="rb-form-link">
+            <a href="#" class="rb-forgot-pass">Forgot password?</a>
+          </div>
+          <div class="rb-field button-type-field">
+            <button>Login</button>
+          </div>
+          <hr>
+          <div class="rb-form-link">
+            <p>Please, enter your requested data for login.</p>
+          </div>
+        </form>  
+      </div>
+    </div>
+  </section>
+
+  <!--Footer-->
   <footer>
     
   </footer>
