--- a/html/services.html
+++ b/html/services.html
@@ -1,63 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Services</title>
-      <link rel="icon" href="">
-      <link rel="stylesheet" href="../css/services.css">
-      <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-      <link rel="stylesheet" href="../bootstrap/js/bootstrap.js">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    </head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Services</title>
+    <link rel="icon" href="">
+    <link rel="stylesheet" href="../css/services.css">
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../bootstrap/js/bootstrap.js">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  </head>
 
-    <body id="rb-home-design">
+  <body id="rb-home-design">
 
-        <!--Header-->
-        <header>
+    <!--Header-->
+    <header>
 
 
-        </header>
+    </header>
 
-        <!--Section-->
-        <section class="rb-services" id="rb-services">
-           <div class="rb-services-home">
-              <h1>My <span>Services</span></h1>
-           </div>
-           <div class="row">
-               <div class="col-1">
-                  <img src="../fotot/service1.jpg">
-                  <h1>HOME/DESIGN</h1>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus consequatur itaque suscipit asperiores quia cum neque, corporis dolores voluptatem culpa repellat veritatis aliquid! At, corporis. Quidem facilis consequatur nostrum nihil.</p>
-                  <a href="#"> Download 
-                      <i class="fa-solid fa-arrow-right"></i>
-                   </a>
-                </div>
-             <div class="col-2">
-                <img src="../fotot/service2.jpg">
-                <h1>Kitchen</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores sunt quod explicabo veritatis soluta, in quam porro earum animi voluptates eos asperiores tempora mollitia dolor odit reprehenderit officiis consequatur minima?</p>
-                <a href="#"> Download
-                    <i class="fa-solid fa-arrow-right"></i>
-                </a> 
-              </div>
-              <div class="col-3">
-                <img src="../fotot/service3.jpg">
-                <h1>Room</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis rerum totam assumenda vero dolorum qui, eum commodi sed dolorem delectus itaque fuga. Sunt architecto aliquid accusantium tempora. Praesentium, libero ipsum!</p>
-                <a href="#">Download
-                    <i class="fa-solid fa-arrow-right"></i>
-                </a>
-              </div>
+    <!--Section-->
+    <section class="rb-services" id="rb-services">
+      <div class="rb-services-home">
+        <h1>My <span>Services</span></h1>
+      </div>
+      <div class="row">
+       <div class="col-md-4 col-xs-12">
+          <img src="../fotot/service1.jpg">
+            <h1>Home</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus consequatur itaque suscipit asperiores quia cum neque, corporis dolores voluptatem culpa repellat veritatis aliquid! At, corporis. Quidem facilis consequatur nostrum nihil.</p>
+            <a href="#"> Download 
+              <i class="fa-solid fa-arrow-right"></i>
+            </a>
+        </div>
+        <div class="col-md-4 col-xs-12">
+          <img src="../fotot/service2.jpg">
+            <h1>Kitchen</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores sunt quod explicabo veritatis soluta, in quam porro earum animi voluptates eos asperiores tempora mollitia dolor odit reprehenderit officiis consequatur minima?</p>
+            <a href="#"> Download
+              <i class="fa-solid fa-arrow-right"></i>
+            </a> 
+        </div>
+        <div class="col-md-4 col-xs-12">
+          <img src="../fotot/service3.jpg">
+          <h1>Room</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis rerum totam assumenda vero dolorum qui, eum commodi sed dolorem delectus itaque fuga. Sunt architecto aliquid accusantium tempora. Praesentium, libero ipsum!</p>
+          <a href="#">Download
+            <i class="fa-solid fa-arrow-right"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+
+  <!-- Footer -->     
+   <footer class="bg-dark text-white pt-5 pb-4">
+      <div class="container text-center text-md-left">
+        <div class="row text-center text-md-left">
+          <div class="col-md-4 col-xs-12">
+            <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
+            <p class="text-transform-uppercase">
+              <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-success">Designer</a>
+            </p>
+            <p>
+              <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-info">Interactions</a>
+            </p>
+            <p>
+              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-warning">Hosting</a>
+            </p>
+            <p>
+              <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-danger">Edition</a>
+            </p> 
+          </div>
+          <div class="col-md-4 col-xs-12">
+            <h5 class="text-uppercase mb-4 font-weight-bold text-light">The sites</h5>
+            <p>
+              <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-warning text-decoration-none">Products</a>
+           </p>
+           <p>
+              <a href="https://www.dwell.com/discover/interior%20design"class="text-danger text-decoration-none">Article</a>
+           </p>
+           <p>
+             <a href="https://www.designtosell.com/" class="text-success text-decoration-none">Sells</a>
+            </p>
+          </div>
+          <div class="col-md-4 col-xs-12">
+            <h5 class="text-uppercase">Social</h5>
+            <p>
+              <a href="https://www.facebook.com/" class="text-info text-decoration-none">
+              <i class="fab fa-facebook mt-2 text-capitalize"></i>Facebook</a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/" class="text-danger text-decoration-none">
+              <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i>Instagram</a>
+            </p>
+            <p>
+              <a href="https://www.gmail.com/" class="text-success text-decoration-none">
+              <i class="fa fa-envelope"></i>Mail</a>
+            </p>
+          </div>
+        </div>
+
+        <hr class="mb-6">
+        <div class="row align-items-center">
+          <div class="col-md-6 col-xs-12">
+              <p>&copy; Copyright 2023 All reserved by
+              <a href="../html/about.html"class="text-success text-decoration-none"><strong>Rinesa Bislimi</strong></a></p>
             </div>
-        </section>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 
-        <!-- Footer -->
-        <footer>
-
-
-        </footer>
-
-    </body>
 </html>
