--- a/html/home.html
+++ b/html/home.html
@@ -6,9 +6,9 @@
     <title>Home</title>
     <link rel="stylesheet" href="../css/home.css">
     <link rel="icon" href="../fotot/icon1.jpg">
-    <script src="../js/home.js"defer></script>
+    <script src="../js/home.js" defer></script>
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../bootstrap/js/bootstrap.js">
+    <script src="../bootstrap/js/bootstrap.js" defer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
