--- a/html/services.html
+++ b/html/services.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services</title>
-    <link rel="icon" href="">
-    <link rel="stylesheet" href="../css/services.css">
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-    <script src="../bootstrap/js/bootstrap.js"defer></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Services</title>
+  <link rel="icon" href="">
+  <link rel="stylesheet" href="../css/services.css">
+  <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
+  <script src="../bootstrap/js/bootstrap.js"defer></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
 
 <body id="rb-home-design">
 
@@ -29,28 +29,28 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="../fotot/service1.jpg" class="d-block w-100 height-50 " alt="foto1">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption d-md-block">
           <h5 class="text-dark font-weight-bold text-bg-light">Living room</h5>
           <p class="text-dark text-bg-light">hello</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="../fotot/service2.jpg" class="d-block w-100 height-50" alt="foto2">
-        <div class="carousel-caption d-none d-md-block text-danger">
+        <div class="carousel-caption d-md-block text-danger">
           <h5 class="text-white text-bg-dark font-weight-bold">Kitchen</h5>
           <p class="text-white text-bg-dark">Some representative placeholder content for the second slide.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="../fotot/service3.jpg" class="d-block w-100 height-50" alt="foto3">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption d-md-block">
           <h5>Room</h5>
           <p>Some representative placeholder content for the third slide.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="../fotot/service4.jpg" class="d-block w-100 height-50" alt="foto4">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption d-md-block">
           <h5>Bathroom</h5>
           <p>Some representative placeholder content for the third slide.</p>
         </div>
