--- a/html/services.html
+++ b/html/services.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Services</title>
-  <link rel="icon" href="">
+  <link rel="icon" href="../fotot/services-icon.jpg">
   <link rel="stylesheet" href="../css/services.css">
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
   <script src="../bootstrap/js/bootstrap.js"defer></script>
