--- a/html/languages.html
+++ b/html/languages.html
@@ -15,26 +15,35 @@
 <body id="rb-home-design">
 
 <!--Header-->
+
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-dark bg-white fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="../html/home.html"><img src="../fotot/icon1.jpg"></a>
+      <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
+        data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </button>
-            <ul class="dropdown-menu dropdown-menu-dark">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-        </ul>
+      <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link active text-dark" aria-current="page" href="../html/home.html"><i class="fa-solid fa-house"></i> Home</a>
+            </li>
+            <li class="nav-item">
+              <li><a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a></li>
+              <li><a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
+              <li><a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
+              <li><a class="nav-link text-dark" href="../html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
+              <li><a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
+              <li><a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </nav>
@@ -45,26 +54,26 @@
 <section>
   <div class="rb-card-container">
     <div class="rb-card">
-      <img src="../fotot/service1.jpg" alt="foto1">
+      <img src="../fotot/language1.jpg" alt="foto1">
       <div class="rb-card-content">
-        <h3>Albanian</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quisquam nisi doloribus quaerat, quam inventore ullam amet beatae doloremque, ipsam dolores aliquam voluptatum quis rerum? Reiciendis doloremque quasi incidunt dolor.</p>
-        <button type="button" class="btn btn-dark">Click</button>
+        <h3>HOME YEAR '2000'</h3>
+        <p>McMansions filled the suburbs, with the average house measuring 2,300 square feet-double that of just two generations earlier. Houses were built with open floor plan, high ceilings, bonus rooms, and even home theaters.</p>
+        <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/" class="text-white text-decoration-none">Click</a></button>
       </div>
     </div>
     <div class="rb-card">
-      <img src="../fotot/service1.jpg" alt="foto1">
+      <img src="../fotot/language2.jpg" alt="foto1">
       <div class="rb-card-content">
-        <h3>English</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quisquam nisi doloribus quaerat, quam inventore ullam amet beatae doloremque, ipsam dolores aliquam voluptatum quis rerum? Reiciendis doloremque quasi incidunt dolor.</p>
-        <button type="button" class="btn btn-dark">Click</button>
+        <h3>HOME YEAR '2010'</h3>
+        <p>In the America, smart tech began to automate homes, making it possible to turn on lights, adjust the thermostat, and open the blinds through an app. Flat-screen TVs hung over the fireplace where art used to be.</p>                            
+        <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/" class="text-decoration-none text-white">Click</a></button>
       </div>
     </div>
     <div class="rb-card">
-      <img src="../fotot/service1.jpg" alt="foto1">
+      <img src="../fotot/language3.jpg" alt="foto1">
       <div class="rb-card-content">
-        <h3>Card3</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quisquam nisi doloribus quaerat, quam inventore ullam amet beatae doloremque, ipsam dolores aliquam voluptatum quis rerum? Reiciendis doloremque quasi incidunt dolor.</p>
+        <h3>HOME YEAR '2023'</h3>
+        <p>The home design landscape has undergone significant changes in 2023, reflecting a more modern and innovative approach. New technologies have been sealessly integrated, making your home smarter and beter suited to everyday needs.</p>
         <button type="button" class="btn btn-dark">Click</button>
       </div>
     </div>
