--- a/html/services.html
+++ b/html/services.html
@@ -15,44 +15,51 @@
 <body id="rb-home-design">
 
   <!--Header-->
-  <header>
-      
-  </header>
-  <!--Section-->
+  
+  
+ <!--Section-->
   <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" arial-label="Slide 5"></button>
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../fotot/service1.jpg" class="d-block w-100 height-50 " alt="foto1">
+        <img src="../fotot/service1.jpg" class="d-block w-100" alt="foto1">
         <div class="carousel-caption d-md-block">
-          <h5 class="text-dark font-weight-bold text-bg-light">Living room</h5>
-          <p class="text-dark text-bg-light">hello</p>
+          <h5 class="text-dark font-weight-bold ">Living room</h5>
+          <p class="text-dark">The living room, a sanctuary within the home, is where comfort meets style. This versatile space serves as a hub for relaxation and socializing, it's design carefully curated for both aesthetics and functionality.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../fotot/service2.jpg" class="d-block w-100 height-50" alt="foto2">
-        <div class="carousel-caption d-md-block text-danger">
-          <h5 class="text-white text-bg-dark font-weight-bold">Kitchen</h5>
-          <p class="text-white text-bg-dark">Some representative placeholder content for the second slide.</p>
+        <img src="../fotot/service2.jpg " class="d-block w-100 alt" alt="foto2">
+        <div class="carousel-caption d-md-block">
+          <h5 class="text-white font-weight-bold">Kitchen</h5>
+          <p class="text-white ">The kitchen, the heart of the home, is where delicious aromas intertwine with shared laughter. It's design balances functionality and style, offering a space where culinary creations come to life.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../fotot/service3.jpg" class="d-block w-100 height-50" alt="foto3">
+        <img src="../fotot/service3.jpg" class="d-block w-100" alt="foto3">
         <div class="carousel-caption d-md-block">
-          <h5>Room</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h5 class="text-white font-weight-bold">Bathroom</h5>
+          <p class="text-white">Thoughtful design elements, such as soft lighting and calming color schemes, contribute to a spa-like ambiance. It's a space where simplicity meets luxury, creating a refreshing sanctuary where one can unwind and recharge. </p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../fotot/service4.jpg" class="d-block w-100 height-50" alt="foto4">
-        <div class="carousel-caption d-md-block">
-          <h5>Bathroom</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+        <img src="../fotot/service4.jpg" class="d-block w-100" alt="foto4">
+        <div class="carousel-caption d-m-block">
+          <h5 class="text-white font-weight-bold">Bedroom</h5>
+          <p class="text-white">The bedroom is a sanctuary for rest and rejuvenation, a personal haven where comfort and tranquility converge. It's design focuses on creating a serene atmosphere conducive to relaxation and sleep. </p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../fotot/service5.jpg" class="d-block w-100" alt="foto5">
+        <div class="carousel-caption d-m-block">
+          <h5 class="text-dark font-weight-bold">Bedroom for children</h5>
+          <p class="text-dark">A children's bedroom is a magical realm where imagination takes flight. Designed to inspire creativity and nurture dreams, these spaces are adorned with playful colors, whimscical decorations, and cozy furnishings.</p>
         </div>
       </div>
     </div>
@@ -125,8 +132,6 @@
       </div>
     </div>
   </footer>
-
-
 
 </body>
 </html>
