--- a/html/languages.html
+++ b/html/languages.html
@@ -14,14 +14,12 @@
 
 <body id="rb-home-design">
 
-<!--Header-->
-
-<header>
-  <nav class="navbar navbar-dark bg-white fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="../html/home.html"><img src="../fotot/icon1.jpg"></a>
-      <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
-        data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+  <!--Header-->
+  <header>
+    <nav class="navbar navbar-dark bg-white fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../html/home.html"><img src="../fotot/icon1.jpg"></a>
+        <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
@@ -45,99 +43,98 @@
           </ul>
         </div>
       </div>
-    </div>
-  </nav>
-</header>
+    </nav>
+  </header>
 
-
-<!--Section-->
-<section>
-  <div class="rb-card-container">
-    <div class="rb-card">
-      <img src="../fotot/language1.jpg" alt="foto1">
-      <div class="rb-card-content">
-        <h3>HOME YEAR '2000'</h3>
-        <p>McMansions filled the suburbs, with the average house measuring 2,300 square feet-double that of just two generations earlier. Houses were built with open floor plan, high ceilings, bonus rooms, and even home theaters.</p>
-        <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/" class="text-white text-decoration-none">Click</a></button>
+  <!--Section-->
+  <section>
+    <div class="rb-card-container">
+      <div class="rb-card">
+        <img src="../fotot/language1.jpg" alt="foto1">
+        <div class="rb-card-content">
+          <h3>HOME YEAR '2000'</h3>
+          <p>McMansions filled the suburbs, with the average house measuring 2,300 square feet-double that of just two generations earlier. Houses were built with open floor plan, high ceilings, bonus rooms, and even home theaters.</p>
+          <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/" class="text-white text-decoration-none">Click</a></button>
+        </div>
+      </div>
+      <div class="rb-card">
+        <img src="../fotot/language2.jpg" alt="foto1">
+        <div class="rb-card-content">
+          <h3>HOME YEAR '2010'</h3>
+          <p>In the America, smart tech began to automate homes, making it possible to turn on lights, adjust the thermostat, and open the blinds through an app. Flat-screen TVs hung over the fireplace where art used to be.</p>                            
+          <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/" class="text-decoration-none text-white">Click</a></button>
+        </div>
+      </div>
+      <div class="rb-card">
+        <img src="../fotot/language3.jpg" alt="foto1">
+        <div class="rb-card-content">
+          <h3>HOME YEAR '2023'</h3>
+          <p>The home design landscape has undergone significant changes in 2023, reflecting a more modern and innovative approach. New technologies have been sealessly integrated, making your home smarter and beter suited to everyday needs.</p>
+          <button type="button" class="btn btn-dark">Click</button>
+        </div>
       </div>
     </div>
-    <div class="rb-card">
-      <img src="../fotot/language2.jpg" alt="foto1">
-      <div class="rb-card-content">
-        <h3>HOME YEAR '2010'</h3>
-        <p>In the America, smart tech began to automate homes, making it possible to turn on lights, adjust the thermostat, and open the blinds through an app. Flat-screen TVs hung over the fireplace where art used to be.</p>                            
-        <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/" class="text-decoration-none text-white">Click</a></button>
-      </div>
-    </div>
-    <div class="rb-card">
-      <img src="../fotot/language3.jpg" alt="foto1">
-      <div class="rb-card-content">
-        <h3>HOME YEAR '2023'</h3>
-        <p>The home design landscape has undergone significant changes in 2023, reflecting a more modern and innovative approach. New technologies have been sealessly integrated, making your home smarter and beter suited to everyday needs.</p>
-        <button type="button" class="btn btn-dark">Click</button>
-      </div>
-    </div>
-  </div>
-</section>
+  </section>
     
-<!--Footer-->
-<footer>
-  <footer class="bg-dark text-white pt-5 pb-4">
-    <div class="container text-center text-md-center">
-      <div class="row text-center text-md-left">
-        <div class="col-md-4 col-xs-12">
-          <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
-          <p class="text-transform-uppercase">
-            <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
-          </p>
-          <p>
-            <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-white">Interactions</a>
-          </p>
-          <p>
-            <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
-          </p>
-          <p>
-            <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-white">Edition</a>
-          </p>
-        </div>
-        <div class="col-md-4 col-xs-12">
-          <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
-          <p>
-            <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
-         </p>
-         <p>
-            <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
-         </p>
-          <p>
-           <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
-          </p>
-        </div>
-        <div class="col-md-4 col-xs-12">
-          <h5 class="text-uppercase">Social</h5>
-          <p>
-            <a href="https://www.facebook.com/" class="text-decoration-none text-white">
+  <!--Footer-->
+  <footer>
+    <footer class="bg-dark text-white pt-5 pb-4">
+      <div class="container text-center text-md-center">
+        <div class="row text-center text-md-left">
+          <div class="col-md-4 col-xs-12">
+            <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
+            <p class="text-transform-uppercase">
+              <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
+            </p>
+            <p>
+              <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-white">Interactions</a>
+            </p>
+            <p>
+              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
+            </p>
+            <p>
+              <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-white">Edition</a>
+            </p>
+          </div>
+          <div class="col-md-4 col-xs-12">
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
+            <p>
+              <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
+            </p>
+            <p>
+              <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
+            </p>
+            <p>
+              <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
+            </p>
+          </div>
+          <div class="col-md-4 col-xs-12">
+            <h5 class="text-uppercase">Social</h5>
+            <p>
+              <a href="https://www.facebook.com/" class="text-decoration-none text-white">
               <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
-          </p>
-          <p>
-            <a href="https://www.instagram.com/" class="text-decoration-none text-white">
+            </p>
+            <p>
+              <a href="https://www.instagram.com/" class="text-decoration-none text-white">
               <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
-          </p>
-          <p>
-            <a href="https://www.gmail.com/" class="text-white text-decoration-none">
+            </p>
+            <p>
+              <a href="https://www.gmail.com/" class="text-white text-decoration-none">
               <i class="fa fa-envelope text-primary"></i> Mail</a>
-          </p>
+            </p>
+          </div>
         </div>
-    </div>
 
-    <hr class="mb-6">
-    <div class="row align-items-center">
-      <div class="col-xs-12">
-        <p>&copy; Copyright 2024 All reserved by
-        <a href="#"class="text-decoration-none text-primary-emphasis"><strong>Rinesa Bislimi</strong></a></p>
+        <hr class="mb-6">
+        <div class="row align-items-center">
+          <div class="col-xs-12">
+            <p>&copy; Copyright 2024 All reserved by
+            <a href="#"class="text-decoration-none text-primary-emphasis"><strong>Rinesa Bislimi</strong></a></p>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</footer>
+    </footer>
+  </footer>
 
 </body>
 </html>
