--- a/html/about.html
+++ b/html/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,48 +8,58 @@
   <link rel="stylesheet" href="../css/about.css">
   <link rel="icon" href="../fotot/icon2.jpg">
   <script src="../js/about.js" defer></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <script src="../bootstrap/js/bootstrap.js" defer></script>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 </head>
 
 <body id="rb-design-home">
-  
- <!--Header-->
- <header>
-  <nav class="navbar navbar-dark bg-white fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="../html/home.html"><img src="../fotot/icon1.jpg"></a>
-      <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
-        data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item">
-              <a class="nav-link active text-dark" aria-current="page" href="../html/home.html"><i class="fa-solid fa-house"></i> Home</a>
-            </li>
-            <li class="nav-item">
-              <li><a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a></li>
-              <li><a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
-              <li><a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
-              <li><a class="nav-link text-dark" href="../html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
-              <li><a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
-              <li><a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
-            </li>
-          </ul>
+
+  <!--Header-->
+  <header>
+    <nav class="navbar navbar-dark bg-white fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../html/home.html"><img src="../fotot/icon1.jpg"></a>
+        <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end text-bg-white" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="rb-nav-item">
+                <a class="nav-link active text-dark" aria-current="page" href="../html/home.html"><i class="fa-solid fa-house"></i> Home</a>
+              </li>
+              <li class="rb-nav-item">
+                <a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a>
+              </li>
+              <li class="rb-nav-item">
+                <a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
+              </li>
+              <li class="rb-nav-item">
+                <a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
+              </li> 
+              <li class="rb-nav-item">
+                <a class="nav-link text-dark" href="../html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
+              </li> 
+              <li class="rb-nav-item">
+                <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
+              </li> 
+              <li ckass="rb-nav-item"> 
+                <a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-  </nav>
-</header>
+    </nav>
+  </header>
 
   <!--Section-->
   <section class="rb-about">
@@ -62,15 +73,18 @@
             <div class="rb-about-text">
               <h1>About Us</h1>
               <h5>Home design</h5>
-              <p>Welcome to a world, where ideas merge seamlessly with function, creating the perfect harmony in your home design. Our approach to creating living spaces goes beyond aesthetic to creating an experience that reflects your unique style and personality. From the moment you enter your home, every element is carefully selected to reflect your taste and preferences.</p>
-              <a href="https://www.quora.com/How-do-I-get-front-end-developer-experience-as-a-student"> <button type="button" class="rb-button">Click me</button></a>
+              <p>Welcome to a world, where ideas merge seamlessly with function, creating the perfect harmony in your
+                home design. Our approach to creating living spaces goes beyond aesthetic to creating an experience that
+                reflects your unique style and personality. From the moment you enter your home, every element is
+                carefully selected to reflect your taste and preferences.</p>
+              <a href="https://www.quora.com/How-do-I-get-front-end-developer-experience-as-a-student"><button type="button" class="rb-button">Click me</button></a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
- 
+
   <!--Footer-->
   <footer>
     <footer class="bg-dark text-white pt-5 pb-4">
@@ -82,53 +96,56 @@
               <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
             </p>
             <p>
-              <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-white">Interactions</a>
+              <a href="https://www.interaction-design.org/literature/topics/interaction-design"class="text-decoration-none text-white">Interactions</a>
             </p>
             <p>
               <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
             </p>
             <p>
-              <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-white">Edition</a>
+              <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/"class="text-decoration-none text-white">Edition</a>
             </p>
           </div>
           <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
             <p>
               <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
-           </p>
-           <p>
-              <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
-           </p>
+            </p>
             <p>
-             <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
+              <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
+            </p>
+            <p>
+              <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
             </p>
           </div>
           <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase">Social</h5>
             <p>
               <a href="https://www.facebook.com/" class="text-decoration-none text-white">
-                <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
+              <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
             </p>
             <p>
               <a href="https://www.instagram.com/" class="text-decoration-none text-white">
-                <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
+              <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
             </p>
             <p>
               <a href="https://www.gmail.com/" class="text-white text-decoration-none">
-                <i class="fa fa-envelope text-primary"></i> Mail</a>
+              <i class="fa fa-envelope text-primary"></i> Mail</a>
             </p>
           </div>
-      </div>
-
-      <hr class="mb-6">
-      <div class="row align-items-center">
-        <div class="col-xs-12">
-          <p>&copy; Copyright 2024 All reserved by
-          <a href="#"class="text-decoration-none text-primary-emphasis"><strong>Rinesa Bislimi</strong></a></p>
+        </div>
+  
+        <hr class="mb-6">
+        <div class="row align-items-center">
+          <div class="col-xs-12">
+            <p>&copy; Copyright 2024 All reserved by
+              <a href="#" class="text-decoration-none text-primary-emphasis"><strong>Rinesa Bislimi</strong></a>
+            </p>
+          </div>
         </div>
       </div>
-    </div>
+    </footer>
   </footer>
   
+
 </body>
 </html>
