--- a/html/table.html
+++ b/html/table.html
@@ -20,44 +20,47 @@
   <!--Section-->
 
   <section>
-      <h1>Table</h1>
-      <hr>
-           <table>
-            <thead class="rb-header">
-              <tr>
-                  <th>First</th>
-                  <th>Second</th>
-                  <th>Third</th>
-                  <th>Fourth</th>
-                  <th>Table</th>
-               </tr>
-            </thead>
-            <tbody>
-               <tr>
-                  <td>name</td>
-                  <td>name</td>
-                  <td>name</td>
-                  <td>name</td>
-                  <td>name</td>
-                </tr>
-                <tr>
-                  <td>age</td>
-                  <td>age</td>
-                  <td>age</td>
-                  <td>age</td>
-                  <td>age</td>
-                </tr>
-                <tr>
-                   <td>country</td>
-                   <td>country</td>
-                   <td>country</td>
-                   <td>country</td>
-                   <td>country</td>
-                </tr>
-            </tbody>
-            </table>
-        
-    </section>
+    <div class="rb-table-box">
+      <div class="rb-table-row">
+        <h1>Table</h1>
+        <hr>
+        <table class="rb-table">
+          <thead>
+            <tr>
+              <th>Designer</th>
+              <th>Job</th>
+              <th>Address</th>
+              <th>Fourth</th>
+              <th>Table</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>name</td>
+              <td>name</td>
+              <td>name</td>
+              <td>name</td>
+              <td>name</td>
+            </tr>
+            <tr>
+              <td>age</td>
+              <td>age</td>
+              <td>age</td>
+              <td>age</td>
+              <td>age</td>
+            </tr>
+            <tr>
+              <td>country</td>
+              <td>country</td>
+              <td>country</td>
+              <td>country</td>
+              <td>country</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </section>
 
 
   <!--Footer-->
