--- a/html/video.html
+++ b/html/video.html
@@ -18,7 +18,7 @@
    
     <!--Header-->
 
-
+  
 
     <!--Section-->
     <section>
@@ -27,7 +27,7 @@
           <p>Play video </p>
         </div>
        <div class="rb-video">
-          <video src="../fotot/video.mp4" controls></video>
+          <video src="../fotot/video.mp4"></video>
           <b class="rb-close">Close</b>
         </div>
    </section>
