--- a/html/table.html
+++ b/html/table.html
@@ -14,54 +14,53 @@
 
 <body id="rb-home-design">
   
-    <!--Header-->
+  <!--Header-->
     
 
   <!--Section-->
 
   <section>
-    <div class="rb-table-box">
-      <div class="rb-table-row">
+    <div class="rb-content">
+      <div class="rb-table">
         <h1>Table</h1>
         <hr>
-        <table class="rb-table">
+        <table>
           <thead>
             <tr>
-              <th>Designer</th>
+              <th> </th>
+              <th>Name</th>
+              <th>Year to start</th>
+              <th>Country</th>
               <th>Job</th>
-              <th>Address</th>
-              <th>Fourth</th>
-              <th>Table</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>name</td>
-              <td>name</td>
-              <td>name</td>
-              <td>name</td>
-              <td>name</td>
+              <td data-label=""><span>1</span></td>
+              <td data-label="Name"><span>Jeffrey Zeldman</span></td>
+              <td data-label="Age"><span>1995</span></td>
+              <td data-label="Country">New York</td>
+              <td data-label="Job"><span><a href="https://en.wikipedia.org/wiki/Jeffrey_Zeldman" class="rb-job">Web standards project</a></span></td>
             </tr>
             <tr>
-              <td>age</td>
-              <td>age</td>
-              <td>age</td>
-              <td>age</td>
-              <td>age</td>
+              <td data-label="">1</td>
+              <td data-label="">2</td>
+              <td data-label="">3</td>
+              <td data-label="">4</td>
+              <td data-label="">5</td>
             </tr>
             <tr>
-              <td>country</td>
-              <td>country</td>
-              <td>country</td>
-              <td>country</td>
-              <td>country</td>
+              <td data-label="">1</td>
+              <td data-label="">2</td>
+              <td data-label="">3</td>
+              <td data-label="">4</td>
+              <td data-label="">5</td>
             </tr>
           </tbody>
         </table>
       </div>
     </div>
   </section>
-
 
   <!--Footer-->
    
