--- a/html/history.html
+++ b/html/history.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>History</title>
-  <link rel="icon" href="../fotot/history.jpg">
+  <link rel="icon" href="../fotot/history-icon.jpg">
   <link rel="stylesheet" href="../css/history.css">
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
   <script src="../bootstrap/js/bootstrap.js" defer></script>
@@ -18,7 +18,7 @@
   <header>
     <nav class="navbar navbar-dark bg-white fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../html/home.html"><img src="../fotot/icon1.jpg"></a>
+        <a class="navbar-brand" href="../html/index.html"><img src="../fotot/home-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link active text-dark" aria-current="page" href="../html/home.html"><i class="fa-solid fa-house"></i> Home</a>
+                <a class="nav-link active text-dark" aria-current="page" href="../html/index.html"><i class="fa-solid fa-house"></i> Home</a>
               </li>
               <li class="nav-item">
                 <li><a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a></li>
