--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="../css/home.css">
-  <link rel="icon" href="../fotot/icon1.jpg">
+  <link rel="icon" href="../fotot/home-icon.jpg">
   <script src="../js/home.js" defer></script>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
   <script src="../bootstrap/js/bootstrap.js"defer></script>
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar navbar-dark bg-white fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../html/home.html"><img  src="../fotot/icon1.jpg"></a>
+        <a class="navbar-brand" href="../html/index.html"><img  src="../fotot/home-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="rb-nav-item">
-                <a class="nav-link active text-dark" aria-current="page" href="../html/home.html"><i class="fa-solid fa-house"></i> Home</a>
+                <a class="nav-link active text-dark" aria-current="page" href="../html/index.html"><i class="fa-solid fa-house"></i> Home</a>
               </li>
               <li class="rb-nav-item">
                 <a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a>
@@ -49,7 +49,7 @@
               <li class="rb-nav-item">
                 <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
               </li> 
-              <li ckass="rb-nav-item"> 
+              <li class="rb-nav-item"> 
                 <a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
               </li>
             </ul>
