--- a/html/login.html
+++ b/html/login.html
@@ -6,7 +6,7 @@
   <title>Login</title>
   <link rel="stylesheet" href="../css/login.css">
   <script src="../js/login.js" defer></script>
-  <link rel="icon" href="../fotot/icon3.jpg">
+  <link rel="icon" href="../fotot/login-icon.jpg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar navbar-dark bg-white fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../html/home.html"><img src="../fotot/icon1.jpg"></a>
+        <a class="navbar-brand" href="../html/index.html"><img src="../fotot/home-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link active text-dark" aria-current="page" href="../html/home.html"><i class="fa-solid fa-house"></i> Home</a>
+                <a class="nav-link active text-dark" aria-current="page" href="../html/index.html"><i class="fa-solid fa-house"></i> Home</a>
               </li>
               <li class="nav-item">
                 <li><a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a></li>
